@@ -28,28 +28,29 @@ import java.util.HashSet;
 import java.util.Hashtable;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
-import org.apache.commons.lang.StringUtils;
+import lombok.Getter;
+import lombok.Setter;
+import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.vfs2.FileName;
 import org.apache.commons.vfs2.FileObject;
 import org.apache.commons.vfs2.FileSystemException;
 import org.apache.hop.base.AbstractMeta;
-import org.apache.hop.base.BaseHopMeta;
 import org.apache.hop.core.CheckResult;
 import org.apache.hop.core.Const;
+import org.apache.hop.core.HopVersionProvider;
 import org.apache.hop.core.ICheckResult;
 import org.apache.hop.core.IProgressMonitor;
 import org.apache.hop.core.NotePadMeta;
 import org.apache.hop.core.ProgressNullMonitorListener;
 import org.apache.hop.core.Result;
 import org.apache.hop.core.SqlStatement;
-import org.apache.hop.core.attributes.AttributesUtil;
 import org.apache.hop.core.database.DatabaseMeta;
 import org.apache.hop.core.exception.HopDatabaseException;
 import org.apache.hop.core.exception.HopException;
 import org.apache.hop.core.exception.HopFileException;
 import org.apache.hop.core.exception.HopMissingPluginsException;
 import org.apache.hop.core.exception.HopRowException;
+import org.apache.hop.core.exception.HopRuntimeException;
 import org.apache.hop.core.exception.HopTransformException;
 import org.apache.hop.core.exception.HopXmlException;
 import org.apache.hop.core.extension.ExtensionPointHandler;
@@ -57,6 +58,7 @@ import org.apache.hop.core.extension.HopExtensionPoint;
 import org.apache.hop.core.file.IHasFilename;
 import org.apache.hop.core.gui.Point;
 import org.apache.hop.core.logging.LogChannel;
+import org.apache.hop.core.parameters.INamedParameters;
 import org.apache.hop.core.parameters.NamedParameters;
 import org.apache.hop.core.reflection.StringSearchResult;
 import org.apache.hop.core.reflection.StringSearcher;
@@ -72,24 +74,26 @@ import org.apache.hop.core.xml.XmlFormatter;
 import org.apache.hop.core.xml.XmlHandler;
 import org.apache.hop.i18n.BaseMessages;
 import org.apache.hop.metadata.api.HopMetadataProperty;
+import org.apache.hop.metadata.api.IEnumHasCodeAndDescription;
 import org.apache.hop.metadata.api.IHopMetadataProvider;
+import org.apache.hop.metadata.serializer.xml.XmlMetadataUtil;
 import org.apache.hop.partition.PartitionSchema;
+import org.apache.hop.pipeline.analysis.BufferDeadlockRisk;
+import org.apache.hop.pipeline.analysis.PipelineBufferDeadlockAnalyzer;
 import org.apache.hop.pipeline.transform.BaseTransform;
-import org.apache.hop.pipeline.transform.ITransformIOMeta;
 import org.apache.hop.pipeline.transform.ITransformMeta;
 import org.apache.hop.pipeline.transform.ITransformMetaChangeListener;
 import org.apache.hop.pipeline.transform.TransformErrorMeta;
 import org.apache.hop.pipeline.transform.TransformMeta;
 import org.apache.hop.pipeline.transform.TransformPartitioningMeta;
-import org.apache.hop.pipeline.transform.stream.IStream;
 import org.apache.hop.pipeline.transforms.missing.Missing;
 import org.apache.hop.resource.IResourceExport;
 import org.apache.hop.resource.IResourceNaming;
 import org.apache.hop.resource.ResourceDefinition;
 import org.apache.hop.resource.ResourceReference;
+import org.jspecify.annotations.NonNull;
 import org.w3c.dom.Document;
 import org.w3c.dom.Node;
-import org.w3c.dom.NodeList;
 
 /**
  * This class defines information about a pipeline and offers methods to save and load it from XML
@@ -104,11 +108,8 @@ public class PipelineMeta extends AbstractMeta
         IHasFilename {
 
   public static final String PIPELINE_EXTENSION = ".hpl";
-  private static final String CONST_DESCRIPTION = "description";
   private static final String CONST_ERROR_OPENING_OR_VALIDATING =
       "PipelineMeta.Exception.ErrorOpeningOrValidatingTheXMLFile";
-  private static final String CONST_PARAMETER = "parameter";
-  private static final String CONST_EMPTY = "        ";
 
   private static final Class<?> PKG = Pipeline.class;
 
@@ -117,19 +118,22 @@ public class PipelineMeta extends AbstractMeta
 
   public static final int BORDER_INDENT = 20;
 
+  @Getter
+  @Setter
   @HopMetadataProperty(key = "info")
   protected PipelineMetaInfo info;
 
   /** The list of transforms associated with the pipeline. */
+  @Getter
+  @Setter
   @HopMetadataProperty(key = "transform")
   protected List<TransformMeta> transforms;
 
   /** The list of hops associated with the pipeline. */
+  @Getter
+  @Setter
   @HopMetadataProperty(groupKey = "order", key = "hop")
   protected List<PipelineHopMeta> hops;
-
-  /** The status of the pipeline. */
-  protected int pipelineStatus;
 
   /** Indicators for changes in transforms, databases, hops, and notes. */
   protected boolean changedTransforms;
@@ -154,15 +158,6 @@ public class PipelineMeta extends AbstractMeta
   private ArrayList<Missing> missingPipeline;
 
   // //////////////////////////////////////////////////////////////////////////
-
-  /** A list of localized strings corresponding to string descriptions of the undo/redo actions. */
-  public static final String[] descTypeUndo = {
-    "",
-    BaseMessages.getString(PKG, "PipelineMeta.UndoTypeDesc.UndoChange"),
-    BaseMessages.getString(PKG, "PipelineMeta.UndoTypeDesc.UndoNew"),
-    BaseMessages.getString(PKG, "PipelineMeta.UndoTypeDesc.UndoDelete"),
-    BaseMessages.getString(PKG, "PipelineMeta.UndoTypeDesc.UndoPosition")
-  };
 
   /** A constant specifying the tag value for the XML node of the pipeline information. */
   protected static final String XML_TAG_INFO = "info";
@@ -191,7 +186,7 @@ public class PipelineMeta extends AbstractMeta
   }
 
   /**
-   * Compares two pipeline on name and filename. The comparison algorithm is as follows:<br>
+   * Compares two pipelines on name and filename. The comparison algorithm is as follows:<br>
    *
    * <ol>
    *   <li>The first pipeline's filename is checked first; if it has none, the pipeline is generated
@@ -200,9 +195,7 @@ public class PipelineMeta extends AbstractMeta
    *       pipeline has no name and the second one does, a -1 is returned. If the opposite is true,
    *       1 is returned.
    *   <li>If they both have names they are compared as strings. If the result is non-zero it is
-   *       returned. Otherwise the repository directories are compared using the same technique of
-   *       checking empty values and then performing a string comparison, returning any non-zero
-   *       result.
+   *       returned.
    * </ol>
    *
    * @param t1 the first pipeline to compare
@@ -217,21 +210,21 @@ public class PipelineMeta extends AbstractMeta
 
   /**
    * Compares this pipeline's meta-data to the specified pipeline's meta-data. This method simply
-   * calls compare(this, o)
+   * calls compare(this, pipelineMeta)
    *
-   * @param o the o
-   * @return the int
+   * @param pipelineMeta the pipelineMeta
+   * @return the comparison value
    * @see #compare(PipelineMeta, PipelineMeta)
    * @see Comparable#compareTo(Object)
    */
   @Override
-  public int compareTo(PipelineMeta o) {
-    return compare(this, o);
+  public int compareTo(@NonNull PipelineMeta pipelineMeta) {
+    return compare(this, pipelineMeta);
   }
 
   /**
    * Checks whether this pipeline's meta-data object is equal to the specified object. If the
-   * specified object is not an instance of PipelineMeta, false is returned. Otherwise the method
+   * specified object is not an instance of PipelineMeta, false is returned, otherwise the method
    * returns whether a call to compare() indicates equality (i.e. compare(this,
    * (PipelineMeta)obj)==0).
    *
@@ -245,78 +238,25 @@ public class PipelineMeta extends AbstractMeta
     if (!(obj instanceof PipelineMeta)) {
       return false;
     }
-
     return compare(this, (PipelineMeta) obj) == 0;
+  }
+
+  @Override
+  public int hashCode() {
+    return super.hashCode();
   }
 
   /**
    * Clones the pipeline meta-data object.
    *
-   * @return a clone of the pipeline meta-data object
-   * @see Object#clone()
+   * @return a clone of the pipeline meta-data object throws {@link HopRuntimeException} because
+   *     this simple method doesn't have enough information to clone all this pipeline metadata.
    */
   @Override
-  public Object clone() {
-    return realClone(true);
-  }
-
-  /**
-   * Perform a real clone of the pipeline meta-data object, including cloning all lists and copying
-   * all values. If the doClear parameter is true, the clone will be cleared of ALL values before
-   * the copy. If false, only the copied fields will be cleared.
-   *
-   * @param doClear Whether to clear all of the clone's data before copying from the source object
-   * @return a real clone of the calling object
-   */
-  public Object realClone(boolean doClear) {
-
-    try {
-      PipelineMeta pipelineMeta = (PipelineMeta) super.clone();
-      if (doClear) {
-        pipelineMeta.clear();
-      } else {
-        // Clear out the things we're replacing below
-        pipelineMeta.transforms = new ArrayList<>();
-        pipelineMeta.hops = new ArrayList<>();
-        pipelineMeta.notes = new ArrayList<>();
-        pipelineMeta.namedParams = new NamedParameters();
-        pipelineMeta.transformChangeListeners = new ArrayList<>();
-      }
-      for (TransformMeta transform : transforms) {
-        pipelineMeta.addTransform((TransformMeta) transform.clone());
-      }
-      // Transform references are original yet. Set them to the clones.
-      for (TransformMeta transform : pipelineMeta.getTransforms()) {
-        final ITransformMeta transformMeta = transform.getTransform();
-        if (transformMeta != null) {
-          final ITransformIOMeta transformIOMeta = transformMeta.getTransformIOMeta();
-          if (transformIOMeta != null) {
-            for (IStream stream : transformIOMeta.getInfoStreams()) {
-              String streamTransformName = stream.getTransformName();
-              if (streamTransformName != null) {
-                TransformMeta streamTransformMeta = pipelineMeta.findTransform(streamTransformName);
-                stream.setTransformMeta(streamTransformMeta);
-              }
-            }
-          }
-        }
-      }
-      for (PipelineHopMeta hop : hops) {
-        pipelineMeta.addPipelineHop(hop.clone());
-      }
-      for (NotePadMeta note : notes) {
-        pipelineMeta.addNote(note.clone());
-      }
-      for (String key : listParameters()) {
-        pipelineMeta.addParameterDefinition(
-            key, getParameterDefault(key), getParameterDescription(key));
-      }
-
-      return pipelineMeta;
-    } catch (Exception e) {
-      e.printStackTrace();
-      return null;
-    }
+  public PipelineMeta clone() {
+    throw new HopRuntimeException(
+        "A pipeline can't be cloned without building new external references like metadata resources."
+            + "Consider serializing to XML and de-serializing using the loadXml() method");
   }
 
   @Override
@@ -331,24 +271,19 @@ public class PipelineMeta extends AbstractMeta
    */
   @Override
   public void clear() {
+    info = new PipelineMetaInfo();
+    info.namedParams = new NamedParameters();
+    info.pipelineStatus = -1;
     transforms = new ArrayList<>();
     hops = new ArrayList<>();
-    namedParams = new NamedParameters();
     transformChangeListeners = new ArrayList<>();
-
-    pipelineStatus = -1;
-
-    info = new PipelineMetaInfo();
-
     undo = new ArrayList<>();
     maxUndo = Const.MAX_UNDO;
     undoPosition = -1;
-
-    super.clear();
-
     transformFieldsCache = new HashMap<>();
     loopCache = new HashMap<>();
     previousTransformCache = new HashMap<>();
+    super.clear();
   }
 
   /**
@@ -364,6 +299,7 @@ public class PipelineMeta extends AbstractMeta
       addTransformChangeListener(iTransformMetaChangeListener);
     }
     changedTransforms = true;
+    setChanged();
     clearCaches();
   }
 
@@ -376,14 +312,16 @@ public class PipelineMeta extends AbstractMeta
   public void addOrReplaceTransform(TransformMeta transformMeta) {
     int index = transforms.indexOf(transformMeta);
     if (index < 0) {
-      index = transforms.add(transformMeta) ? 0 : index;
+      transforms.add(transformMeta);
+      index = transforms.size() - 1;
     } else {
       TransformMeta previous = getTransform(index);
       previous.replaceMeta(transformMeta);
     }
     transformMeta.setParentPipelineMeta(this);
     ITransformMeta iface = transformMeta.getTransform();
-    if (index != -1 && iface instanceof ITransformMetaChangeListener iTransformMetaChangeListener) {
+
+    if (iface instanceof ITransformMetaChangeListener iTransformMetaChangeListener) {
       addTransformChangeListener(index, iTransformMetaChangeListener);
     }
     changedTransforms = true;
@@ -400,6 +338,7 @@ public class PipelineMeta extends AbstractMeta
   public void addPipelineHop(PipelineHopMeta hi) {
     hops.add(hi);
     changedHops = true;
+    setChanged();
     clearCaches();
   }
 
@@ -414,6 +353,7 @@ public class PipelineMeta extends AbstractMeta
     transforms.add(p, transformMeta);
     transformMeta.setParentPipelineMeta(this);
     changedTransforms = true;
+    setChanged();
     ITransformMeta iface = transformMeta.getTransform();
     if (iface instanceof ITransformMetaChangeListener) {
       addTransformChangeListener(p, (ITransformMetaChangeListener) transformMeta.getTransform());
@@ -435,16 +375,8 @@ public class PipelineMeta extends AbstractMeta
       hops.add(hi);
     }
     changedHops = true;
+    setChanged();
     clearCaches();
-  }
-
-  /**
-   * Get a list of defined transforms in this pipeline.
-   *
-   * @return an ArrayList of defined transforms.
-   */
-  public List<TransformMeta> getTransforms() {
-    return transforms;
   }
 
   /**
@@ -500,6 +432,7 @@ public class PipelineMeta extends AbstractMeta
     }
 
     changedTransforms = true;
+    setChanged();
     clearCaches();
   }
 
@@ -516,6 +449,7 @@ public class PipelineMeta extends AbstractMeta
 
     hops.remove(i);
     changedHops = true;
+    setChanged();
     clearCaches();
   }
 
@@ -527,6 +461,7 @@ public class PipelineMeta extends AbstractMeta
   public void removePipelineHop(PipelineHopMeta hop) {
     hops.remove(hop);
     changedHops = true;
+    setChanged();
     clearCaches();
   }
 
@@ -580,10 +515,24 @@ public class PipelineMeta extends AbstractMeta
    * metadata at the specified index to the specified meta-data object.
    *
    * @param i The index into the hops list
-   * @param hi The hop meta-data to set
+   * @param hop The hop meta-data to set
    */
-  public void setPipelineHop(int i, PipelineHopMeta hi) {
-    hops.set(i, hi);
+  public void setPipelineHop(int i, PipelineHopMeta hop) {
+    hops.set(i, hop);
+    clearCaches();
+  }
+
+  /**
+   * Enables or disables a hop. Use this instead of {@link PipelineHopMeta#setEnabled(boolean)}: the
+   * caches in this class take the enabled state of the hops into account, so they need to be
+   * cleared. A stale cache makes the engine look for row sets which were never allocated for a
+   * disabled hop, resulting in "Unable to find input rowset!" during initialization.
+   *
+   * @param hop The hop to enable or disable
+   * @param enabled true to enable the hop, false to disable it
+   */
+  public void setHopEnabled(PipelineHopMeta hop, boolean enabled) {
+    hop.setEnabled(enabled);
     clearCaches();
   }
 
@@ -648,15 +597,12 @@ public class PipelineMeta extends AbstractMeta
    * Searches the list of hops for a hop with a certain name.
    *
    * @param name The name of the hop to look for
-   * @return The hop information or null if nothing was found.
+   * @return The hop found or null if nothing was found.
    */
   public PipelineHopMeta findPipelineHop(String name) {
-    int i;
-
-    for (i = 0; i < nrPipelineHops(); i++) {
-      PipelineHopMeta hi = getPipelineHop(i);
-      if (hi.toString().equalsIgnoreCase(name)) {
-        return hi;
+    for (PipelineHopMeta hop : hops) {
+      if (hop.toString().equalsIgnoreCase(name)) {
+        return hop;
       }
     }
     return null;
@@ -666,15 +612,14 @@ public class PipelineMeta extends AbstractMeta
    * Search all hops for a hop where a certain transform is at the start.
    *
    * @param fromTransform The transform at the start of the hop.
-   * @return The hop or null if no hop was found.
+   * @return The first hop found or null if nothing was found.
    */
   public PipelineHopMeta findPipelineHopFrom(TransformMeta fromTransform) {
-    int i;
-    for (i = 0; i < nrPipelineHops(); i++) {
-      PipelineHopMeta hi = getPipelineHop(i);
-      if (hi.getFromTransform() != null
-          && hi.getFromTransform().equals(fromTransform)) { // return the first
-        return hi;
+    if (fromTransform != null) {
+      for (PipelineHopMeta hop : hops) {
+        if (fromTransform.equals(hop.getFromTransform())) { // return the first
+          return hop;
+        }
       }
     }
     return null;
@@ -684,17 +629,17 @@ public class PipelineMeta extends AbstractMeta
     return hops.stream()
         .filter(
             hop -> hop.getFromTransform() != null && hop.getFromTransform().equals(fromTransform))
-        .collect(Collectors.toList());
+        .toList();
   }
 
   /**
    * Find a certain hop in the pipeline.
    *
-   * @param hi The hop information to look for.
+   * @param hop The hop information to look for.
    * @return The hop or null if no hop was found.
    */
-  public PipelineHopMeta findPipelineHop(PipelineHopMeta hi) {
-    return findPipelineHop(hi.getFromTransform(), hi.getToTransform());
+  public PipelineHopMeta findPipelineHop(PipelineHopMeta hop) {
+    return findPipelineHop(hop.getFromTransform(), hop.getToTransform());
   }
 
   /**
@@ -713,20 +658,18 @@ public class PipelineMeta extends AbstractMeta
    *
    * @param from The transform at the start of the hop.
    * @param to The transform at the end of the hop.
-   * @param disabledToo the disabled too
+   * @param includeDisabled include disabled hop
    * @return The hop or null if no hop was found.
    */
   public PipelineHopMeta findPipelineHop(
-      TransformMeta from, TransformMeta to, boolean disabledToo) {
-    for (int i = 0; i < nrPipelineHops(); i++) {
-      PipelineHopMeta hi = getPipelineHop(i);
-      if (hi.isEnabled() || disabledToo) {
-        if (hi.getFromTransform() != null
-            && hi.getToTransform() != null
-            && hi.getFromTransform().equals(from)
-            && hi.getToTransform().equals(to)) {
-          return hi;
-        }
+      TransformMeta from, TransformMeta to, boolean includeDisabled) {
+    for (PipelineHopMeta hop : hops) {
+      if ((hop.isEnabled() || includeDisabled)
+          && hop.getFromTransform() != null
+          && hop.getToTransform() != null
+          && hop.getFromTransform().equals(from)
+          && hop.getToTransform().equals(to)) {
+        return hop;
       }
     }
     return null;
@@ -736,15 +679,14 @@ public class PipelineMeta extends AbstractMeta
    * Search all hops for a hop where a certain transform is at the end.
    *
    * @param toTransform The transform at the end of the hop.
-   * @return The hop or null if no hop was found.
+   * @return The hop or null if nothing was found.
    */
   public PipelineHopMeta findPipelineHopTo(TransformMeta toTransform) {
-    int i;
-    for (i = 0; i < nrPipelineHops(); i++) {
-      PipelineHopMeta hi = getPipelineHop(i);
-      if (hi.getToTransform() != null
-          && hi.getToTransform().equals(toTransform)) { // Return the first!
-        return hi;
+    if (toTransform != null) {
+      for (PipelineHopMeta hop : hops) {
+        if (toTransform.equals(hop.getToTransform())) { // Return the first!
+          return hop;
+        }
       }
     }
     return null;
@@ -766,8 +708,8 @@ public class PipelineMeta extends AbstractMeta
     if (infoTransforms == null) {
       return false;
     }
-    for (int i = 0; i < infoTransforms.length; i++) {
-      if (prevTransform.getName().equalsIgnoreCase(infoTransforms[i])) {
+    for (String infoTransform : infoTransforms) {
+      if (prevTransform.getName().equalsIgnoreCase(infoTransform)) {
         return true;
       }
     }
@@ -806,12 +748,11 @@ public class PipelineMeta extends AbstractMeta
       for (PipelineHopMeta hi : hops) {
         if (hi.getToTransform() != null
             && hi.isEnabled()
-            && hi.getToTransform().equals(transformMeta)) {
+            && hi.getToTransform().equals(transformMeta)
+            && (info || !isTransformInformative(transformMeta, hi.getFromTransform()))) {
           // Check if this previous transform isn't informative (StreamValueLookup)
           // We don't want fields from this stream to show up!
-          if (info || !isTransformInformative(transformMeta, hi.getFromTransform())) {
-            previousTransforms.add(hi.getFromTransform());
-          }
+          previousTransforms.add(hi.getFromTransform());
         }
       }
       previousTransformCache.put(cacheKey, previousTransforms);
@@ -830,7 +771,7 @@ public class PipelineMeta extends AbstractMeta
     String[] infoTransformName =
         transformMeta.getTransform().getTransformIOMeta().getInfoTransformNames();
     if (infoTransformName == null) {
-      return null;
+      return new TransformMeta[0];
     }
 
     TransformMeta[] infoTransform = new TransformMeta[infoTransformName.length];
@@ -842,7 +783,7 @@ public class PipelineMeta extends AbstractMeta
   }
 
   /**
-   * Find the the number of informational transforms for a certain transform.
+   * Find the number of informational transforms for a certain transform.
    *
    * @param transformMeta The transform
    * @return The number of informational transforms found.
@@ -854,22 +795,20 @@ public class PipelineMeta extends AbstractMeta
 
     int count = 0;
 
-    for (int i = 0; i < nrPipelineHops(); i++) { // Look at all the hops
-
-      PipelineHopMeta hi = getPipelineHop(i);
-      if (hi == null || hi.getToTransform() == null) {
+    // Look at all the hops
+    for (PipelineHopMeta hop : hops) {
+      if (hop == null || hop.getToTransform() == null) {
         LogChannel.GENERAL.logError(
             BaseMessages.getString(PKG, "PipelineMeta.Log.DestinationOfHopCannotBeNull"));
       }
-      if (hi != null
-          && hi.getToTransform() != null
-          && hi.isEnabled()
-          && hi.getToTransform().equals(transformMeta)) {
+      if (hop != null
+          && hop.getToTransform() != null
+          && hop.isEnabled()
+          && hop.getToTransform().equals(transformMeta)
+          && isTransformInformative(transformMeta, hop.getFromTransform())) {
         // Check if this previous transform isn't informative (StreamValueLookup)
         // We don't want fields from this stream to show up!
-        if (isTransformInformative(transformMeta, hi.getFromTransform())) {
-          count++;
-        }
+        count++;
       }
     }
     return count;
@@ -898,11 +837,10 @@ public class PipelineMeta extends AbstractMeta
    */
   public IRowMeta getPrevInfoFields(IVariables variables, TransformMeta transformMeta)
       throws HopTransformException {
-    for (int i = 0; i < nrPipelineHops(); i++) { // Look at all the hops
-      PipelineHopMeta hi = getPipelineHop(i);
-
-      if (hi.isEnabled() && hi.getToTransform().equals(transformMeta)) {
-        TransformMeta infoTransform = hi.getFromTransform();
+    // Look at all the hops
+    for (PipelineHopMeta hop : hops) {
+      if (hop.isEnabled() && hop.getToTransform().equals(transformMeta)) {
+        TransformMeta infoTransform = hop.getFromTransform();
         if (isTransformInformative(transformMeta, infoTransform)) {
           IRowMeta row = getPrevTransformFields(variables, infoTransform);
           return getThisTransformFields(variables, infoTransform, transformMeta, row);
@@ -924,15 +862,15 @@ public class PipelineMeta extends AbstractMeta
         previousTransformCache.get(getTransformMetaCacheKey(transformMeta, true));
     if (prevTransforms == null) {
       prevTransforms = new ArrayList<>();
-      for (int i = 0; i < nrPipelineHops(); i++) { // Look at all the hops
-        PipelineHopMeta hopMeta = getPipelineHop(i);
-        if (hopMeta.isEnabled() && hopMeta.getToTransform().equals(transformMeta)) {
-          prevTransforms.add(hopMeta.getFromTransform());
+      // Look at all the hops
+      for (PipelineHopMeta hop : hops) {
+        if (hop.isEnabled() && hop.getToTransform().equals(transformMeta)) {
+          prevTransforms.add(hop.getFromTransform());
         }
       }
     }
 
-    return prevTransforms.toArray(new TransformMeta[prevTransforms.size()]);
+    return prevTransforms.toArray(new TransformMeta[0]);
   }
 
   /**
@@ -965,7 +903,7 @@ public class PipelineMeta extends AbstractMeta
    * Retrieve a list of succeeding transforms for a certain originating transform.
    *
    * @param transformMeta The originating transform
-   * @return an array of succeeding transforms.
+   * @return A list of succeeding transforms.
    */
   public List<TransformMeta> findNextTransforms(TransformMeta transformMeta) {
     return findNextTransforms(transformMeta, false);
@@ -976,14 +914,13 @@ public class PipelineMeta extends AbstractMeta
    *
    * @param transformMeta The originating transform
    * @param includeDisabled if true, include the following transforms even if hops are disabled
-   * @return an array of succeeding transforms.
+   * @return A list of succeeding transforms.
    */
   public List<TransformMeta> findNextTransforms(
       TransformMeta transformMeta, boolean includeDisabled) {
     List<TransformMeta> nextTransforms = new ArrayList<>();
-    for (int i = 0; i < nrPipelineHops(); i++) { // Look at all the hops
-
-      PipelineHopMeta hop = getPipelineHop(i);
+    // Look at all the hops
+    for (PipelineHopMeta hop : hops) {
       if ((hop.isEnabled() || includeDisabled) && hop.getFromTransform().equals(transformMeta)) {
         nextTransforms.add(hop.getToTransform());
       }
@@ -1023,10 +960,8 @@ public class PipelineMeta extends AbstractMeta
     for (int i = s - 1; i >= 0; i--) { // Back to front because drawing goes from start to end
       TransformMeta transformMeta = transforms.get(i);
       Point p = transformMeta.getLocation();
-      if (p != null) {
-        if (x >= p.x && x <= p.x + iconsize && y >= p.y && y <= p.y + iconsize + 20) {
-          return transformMeta;
-        }
+      if (p != null && x >= p.x && x <= p.x + iconsize && y >= p.y && y <= p.y + iconsize + 20) {
+        return transformMeta;
       }
     }
     return null;
@@ -1039,14 +974,12 @@ public class PipelineMeta extends AbstractMeta
    * @return true if the transform is part of a hop.
    */
   public boolean partOfPipelineHop(TransformMeta transformMeta) {
-    int i;
-    for (i = 0; i < nrPipelineHops(); i++) {
-      PipelineHopMeta hi = getPipelineHop(i);
-      if (hi.getFromTransform() == null || hi.getToTransform() == null) {
+    for (PipelineHopMeta hop : hops) {
+      if (hop.getFromTransform() == null || hop.getToTransform() == null) {
         return false;
       }
-      if (hi.getFromTransform().equals(transformMeta)
-          || hi.getToTransform().equals(transformMeta)) {
+      if (hop.getFromTransform().equals(transformMeta)
+          || hop.getToTransform().equals(transformMeta)) {
         return true;
       }
     }
@@ -1093,10 +1026,10 @@ public class PipelineMeta extends AbstractMeta
       throws HopTransformException {
     IRowMeta fields = new RowMeta();
 
-    for (int i = 0; i < transformMeta.length; i++) {
-      IRowMeta flds = getTransformFields(variables, transformMeta[i]);
-      if (flds != null) {
-        fields.mergeRowMeta(flds, transformMeta[i].getName());
+    for (TransformMeta meta : transformMeta) {
+      IRowMeta flds = getTransformFields(variables, meta);
+      if (flds != null && meta != null) {
+        fields.mergeRowMeta(flds, meta.getName());
       }
     }
     return fields;
@@ -1137,9 +1070,7 @@ public class PipelineMeta extends AbstractMeta
       return row;
     }
 
-    String fromToCacheEntry =
-        transformMeta.getName()
-            + (targetTransform != null ? ("-" + targetTransform.getName()) : "");
+    String fromToCacheEntry = calculateFieldsCacheEntryKey(transformMeta, targetTransform);
     IRowMeta rowMeta = transformFieldsCache.get(fromToCacheEntry);
     if (rowMeta != null) {
       return rowMeta;
@@ -1148,61 +1079,37 @@ public class PipelineMeta extends AbstractMeta
     // See if the transform is sending ERROR rows to the specified target transform.
     //
     if (targetTransform != null && transformMeta.isSendingErrorRowsToTransform(targetTransform)) {
-      // The error rows are the same as the input rows for
-      // the transform but with the selected error fields added
-      //
-      row = getPrevTransformFields(variables, transformMeta);
-
-      // Check if row object is null that means the transform could be an input transform. In this
-      // case, get fields
-      // out from transform itself
-      if (row.isEmpty()) {
-        row = getThisTransformFields(variables, transformMeta, targetTransform, row, monitor);
-      }
-
-      // Add to this the error fields...
-      TransformErrorMeta transformErrorMeta = transformMeta.getTransformErrorMeta();
-      row.addRowMeta(transformErrorMeta.getErrorRowMeta(variables));
-
-      // Store this row in the cache
-      //
-      transformFieldsCache.put(fromToCacheEntry, row);
-
-      return row;
+      return getTransformFieldsErrorHandling(
+          variables, transformMeta, targetTransform, monitor, fromToCacheEntry);
     }
 
     // Resume the regular program...
+    //
+    getTransformFieldsRegular(variables, transformMeta, monitor, row);
 
+    // Finally, see if we need to add/modify/delete fields with this transform "name"
+    rowMeta = getThisTransformFields(variables, transformMeta, targetTransform, row, monitor);
+
+    // Store this row in the cache
+    //
+    transformFieldsCache.put(fromToCacheEntry, rowMeta);
+
+    return rowMeta;
+  }
+
+  private void getTransformFieldsRegular(
+      IVariables variables, TransformMeta transformMeta, IProgressMonitor monitor, IRowMeta row)
+      throws HopTransformException {
     List<TransformMeta> prevTransforms = findPreviousTransforms(transformMeta, false);
-
-    int nrPrevious = prevTransforms.size();
-
-    if (LogChannel.GENERAL.isDebug()) {
-      LogChannel.GENERAL.logDebug(
-          BaseMessages.getString(
-              PKG,
-              "PipelineMeta.Log.FromTransformALookingAtPreviousTransform",
-              transformMeta.getName(),
-              String.valueOf(nrPrevious)));
-    }
     for (int i = 0; i < prevTransforms.size(); i++) {
       TransformMeta prevTransformMeta = prevTransforms.get(i);
 
-      if (monitor != null) {
-        monitor.subTask(
-            BaseMessages.getString(
-                PKG,
-                "PipelineMeta.Monitor.CheckingTransformTask.Title",
-                prevTransformMeta.getName()));
-      }
+      monitorSubTask(
+          monitor, "PipelineMeta.Monitor.CheckingTransformTask.Title", prevTransformMeta.getName());
 
       IRowMeta add = getTransformFields(variables, prevTransformMeta, transformMeta, monitor);
       if (add == null) {
         add = new RowMeta();
-      }
-      if (LogChannel.GENERAL.isDebug()) {
-        LogChannel.GENERAL.logDebug(
-            BaseMessages.getString(PKG, "PipelineMeta.Log.FoundFieldsToAdd") + add);
       }
       if (i == 0) {
         row.addRowMeta(add);
@@ -1217,15 +1124,43 @@ public class PipelineMeta extends AbstractMeta
         }
       }
     }
+  }
 
-    // Finally, see if we need to add/modify/delete fields with this transform "name"
-    rowMeta = getThisTransformFields(variables, transformMeta, targetTransform, row, monitor);
+  private static @NonNull String calculateFieldsCacheEntryKey(
+      TransformMeta transformMeta, TransformMeta targetTransform) {
+    return transformMeta.getName()
+        + (targetTransform != null ? ("-" + targetTransform.getName()) : "");
+  }
+
+  private @NonNull IRowMeta getTransformFieldsErrorHandling(
+      IVariables variables,
+      TransformMeta transformMeta,
+      TransformMeta targetTransform,
+      IProgressMonitor monitor,
+      String fromToCacheEntry)
+      throws HopTransformException {
+    IRowMeta row;
+    // The error rows are the same as the input rows for
+    // the transform but with the selected error fields added
+    //
+    row = getPrevTransformFields(variables, transformMeta);
+
+    // Check if row object is null that means the transform could be an input transform. In this
+    // case, get fields
+    // out from transform itself
+    if (row.isEmpty()) {
+      row = getThisTransformFields(variables, transformMeta, targetTransform, row, monitor);
+    }
+
+    // Add to this the error fields...
+    TransformErrorMeta transformErrorMeta = transformMeta.getTransformErrorMeta();
+    row.addRowMeta(transformErrorMeta.getErrorRowMeta(variables));
 
     // Store this row in the cache
     //
-    transformFieldsCache.put(fromToCacheEntry, rowMeta);
+    transformFieldsCache.put(fromToCacheEntry, row);
 
-    return rowMeta;
+    return row;
   }
 
   /**
@@ -1273,45 +1208,26 @@ public class PipelineMeta extends AbstractMeta
       IProgressMonitor monitor)
       throws HopTransformException {
     clearTransformFieldsCache();
+
     IRowMeta row = new RowMeta();
 
     if (transformMeta == null) {
       return null;
     }
     List<TransformMeta> prevTransforms = findPreviousTransforms(transformMeta);
-    int nrPrevTransforms = prevTransforms.size();
-    if (LogChannel.GENERAL.isDebug()) {
-      LogChannel.GENERAL.logDebug(
-          BaseMessages.getString(
-              PKG,
-              "PipelineMeta.Log.FromTransformALookingAtPreviousTransform",
-              transformMeta.getName(),
-              String.valueOf(nrPrevTransforms)));
-    }
-    TransformMeta prevTransformMeta;
-    for (int i = 0; i < nrPrevTransforms; i++) {
-      prevTransformMeta = prevTransforms.get(i);
+    for (int i = 0; i < prevTransforms.size(); i++) {
+      TransformMeta prevTransformMeta = prevTransforms.get(i);
       if (transformName != null && !transformName.equalsIgnoreCase(prevTransformMeta.getName())) {
         continue;
       }
 
-      if (monitor != null) {
-        monitor.subTask(
-            BaseMessages.getString(
-                PKG,
-                "PipelineMeta.Monitor.CheckingTransformTask.Title",
-                prevTransformMeta.getName()));
-      }
+      monitorSubTask(
+          monitor, "PipelineMeta.Monitor.CheckingTransformTask.Title", prevTransformMeta.getName());
 
       IRowMeta add = getTransformFields(variables, prevTransformMeta, transformMeta, monitor);
 
-      if (LogChannel.GENERAL.isDebug()) {
-        LogChannel.GENERAL.logDebug(
-            BaseMessages.getString(PKG, "PipelineMeta.Log.FoundFieldsToAdd2") + add.toString());
-      }
       if (i == 0) {
         // we expect all input streams to be of the same layout!
-
         row.addRowMeta(add); // recursive!
       } else {
         // See if the add fields are not already in the row
@@ -1325,6 +1241,19 @@ public class PipelineMeta extends AbstractMeta
       }
     }
     return row;
+  }
+
+  private void monitorBeginTask(
+      IProgressMonitor monitor, int nrWorks, String messageString, String... arguments) {
+    if (monitor != null) {
+      monitor.beginTask(BaseMessages.getString(PKG, messageString, arguments), nrWorks);
+    }
+  }
+
+  private void monitorSubTask(IProgressMonitor monitor, String messageString, String... arguments) {
+    if (monitor != null) {
+      monitor.subTask(BaseMessages.getString(PKG, messageString, arguments));
+    }
   }
 
   /**
@@ -1385,20 +1314,21 @@ public class PipelineMeta extends AbstractMeta
     }
     String name = transformMeta.getName();
 
-    if (monitor != null) {
-      monitor.subTask(
-          BaseMessages.getString(
-              PKG, "PipelineMeta.Monitor.GettingFieldsFromTransformTask.Title", name));
-    }
+    monitorSubTask(monitor, "PipelineMeta.Monitor.GettingFieldsFromTransformTask.Title", name);
 
     ITransformMeta iTransformMeta = transformMeta.getTransform();
     IRowMeta[] infoRowMeta;
     TransformMeta[] lu = getInfoTransform(transformMeta);
     if (Utils.isEmpty(lu)) {
-      infoRowMeta =
-          new IRowMeta[] {
-            iTransformMeta.getTableFields(variables),
-          };
+      try {
+        infoRowMeta =
+            new IRowMeta[] {
+              iTransformMeta.getTableFields(variables),
+            };
+      } catch (HopDatabaseException dbe) {
+        throw new HopTransformException(
+            "Error getting table fields in transform " + transformMeta.getName(), dbe);
+      }
     } else {
       infoRowMeta = new IRowMeta[lu.length];
       for (int i = 0; i < lu.length; i++) {
@@ -1411,10 +1341,30 @@ public class PipelineMeta extends AbstractMeta
     IRowMeta before = row.clone();
     IRowMeta[] clonedInfo = cloneRowMetaInterfaces(infoRowMeta);
     if (!isSomethingDifferentInRow(before, row)) {
-      iTransformMeta.getFields(
-          this, before, name, clonedInfo, nextTransform, variables, metadataProvider);
-      // pass the clone object to prevent from spoiling data by other transforms
-      row = before;
+      GetFieldsExtension extension =
+          new GetFieldsExtension(
+              this,
+              transformMeta,
+              before,
+              name,
+              clonedInfo,
+              nextTransform,
+              variables,
+              metadataProvider);
+      try {
+        ExtensionPointHandler.callExtensionPoint(
+            LogChannel.GENERAL, variables, HopExtensionPoint.GetFieldsExtension.id, extension);
+      } catch (Exception e) {
+        LogChannel.GENERAL.logError("Error calling extension point 'GetFieldsExtension'", e);
+      }
+      if (extension.isHandled()) {
+        row = before;
+      } else {
+        iTransformMeta.getFields(
+            this, before, name, clonedInfo, nextTransform, variables, metadataProvider);
+        // pass the clone object to prevent from spoiling data by other transforms
+        row = before;
+      }
     }
 
     return row;
@@ -1521,123 +1471,22 @@ public class PipelineMeta extends AbstractMeta
   /**
    * Gets the XML representation of this pipeline.
    *
+   * @param variables The variables to look up whether we need to add a license header.
    * @return the XML representation of this pipeline
    * @throws HopException if any errors occur during generation of the XML
    * @see IXml#getXml(IVariables)
-   * @param variables
    */
   @Override
   public String getXml(IVariables variables) throws HopException {
-
-    StringBuilder xml = new StringBuilder(800);
-
-    xml.append(XmlHandler.getLicenseHeader(variables));
-
-    xml.append(XmlHandler.openTag(XML_TAG)).append(Const.CR);
-
-    xml.append("  ").append(XmlHandler.openTag(XML_TAG_INFO)).append(Const.CR);
-
-    xml.append("    ")
-        .append(
-            XmlHandler.addTagValue("name", getName())); // lossy if name is sync'ed with filename
-    xml.append("    ")
-        .append(
-            XmlHandler.addTagValue("name_sync_with_filename", isNameSynchronizedWithFilename()));
-    xml.append("    ").append(XmlHandler.addTagValue(CONST_DESCRIPTION, getDescription()));
-    xml.append("    ")
-        .append(XmlHandler.addTagValue("extended_description", getExtendedDescription()));
-    xml.append("    ").append(XmlHandler.addTagValue("pipeline_version", getPipelineVersion()));
-    xml.append("    ").append(XmlHandler.addTagValue("pipeline_type", getPipelineType().getCode()));
-
-    if (pipelineStatus >= 0) {
-      xml.append("    ").append(XmlHandler.addTagValue("pipeline_status", pipelineStatus));
-    }
-
-    xml.append("    ").append(XmlHandler.openTag(XML_TAG_PARAMETERS)).append(Const.CR);
-    String[] parameters = listParameters();
-    for (int idx = 0; idx < parameters.length; idx++) {
-      xml.append("      ").append(XmlHandler.openTag(CONST_PARAMETER)).append(Const.CR);
-      xml.append(CONST_EMPTY).append(XmlHandler.addTagValue("name", parameters[idx]));
-      xml.append(CONST_EMPTY)
-          .append(XmlHandler.addTagValue("default_value", getParameterDefault(parameters[idx])));
-      xml.append(CONST_EMPTY)
-          .append(
-              XmlHandler.addTagValue(CONST_DESCRIPTION, getParameterDescription(parameters[idx])));
-      xml.append("      ").append(XmlHandler.closeTag(CONST_PARAMETER)).append(Const.CR);
-    }
-    xml.append("    ").append(XmlHandler.closeTag(XML_TAG_PARAMETERS)).append(Const.CR);
-
-    // Performance monitoring
-    //
-    xml.append("    ")
-        .append(
-            XmlHandler.addTagValue(
-                "capture_transform_performance", isCapturingTransformPerformanceSnapShots()));
-    xml.append("    ")
-        .append(
-            XmlHandler.addTagValue(
-                "transform_performance_capturing_delay", getTransformPerformanceCapturingDelay()));
-    xml.append("    ")
-        .append(
-            XmlHandler.addTagValue(
-                "transform_performance_capturing_size_limit",
-                getTransformPerformanceCapturingSizeLimit()));
-
-    xml.append("    ").append(XmlHandler.addTagValue("created_user", getCreatedUser()));
-    xml.append("    ")
-        .append(XmlHandler.addTagValue("created_date", XmlHandler.date2string(getCreatedDate())));
-    xml.append("    ").append(XmlHandler.addTagValue("modified_user", getModifiedUser()));
-    xml.append("    ")
-        .append(XmlHandler.addTagValue("modified_date", XmlHandler.date2string(getModifiedDate())));
-
-    xml.append("  ").append(XmlHandler.closeTag(XML_TAG_INFO)).append(Const.CR);
-
-    xml.append("  ").append(XmlHandler.openTag(XML_TAG_NOTEPADS)).append(Const.CR);
-    if (notes != null) {
-      for (int i = 0; i < nrNotes(); i++) {
-        NotePadMeta ni = getNote(i);
-        xml.append(ni.getXml());
-      }
-    }
-    xml.append("  ").append(XmlHandler.closeTag(XML_TAG_NOTEPADS)).append(Const.CR);
-
-    xml.append("  ").append(XmlHandler.openTag(XML_TAG_ORDER)).append(Const.CR);
-    for (int i = 0; i < nrPipelineHops(); i++) {
-      PipelineHopMeta pipelineHopMeta = getPipelineHop(i);
-      xml.append(pipelineHopMeta.getXml());
-    }
-    xml.append("  ").append(XmlHandler.closeTag(XML_TAG_ORDER)).append(Const.CR);
-
-    // The transforms.
-    for (int i = 0; i < nrTransforms(); i++) {
-      TransformMeta transformMeta = getTransform(i);
-      xml.append(transformMeta.getXml());
-    }
-
-    // The error handling metadata on the transforms
-    xml.append("  ").append(XmlHandler.openTag(XML_TAG_TRANSFORM_ERROR_HANDLING)).append(Const.CR);
-    for (int i = 0; i < nrTransforms(); i++) {
-      TransformMeta transformMeta = getTransform(i);
-
-      if (transformMeta.getTransformErrorMeta() != null) {
-        xml.append(transformMeta.getTransformErrorMeta().getXml());
-      }
-    }
-    xml.append("  ").append(XmlHandler.closeTag(XML_TAG_TRANSFORM_ERROR_HANDLING)).append(Const.CR);
-
-    // Also store the attribute groups
-    //
-    xml.append(AttributesUtil.getAttributesXml(attributesMap));
-
-    xml.append(XmlHandler.closeTag(XML_TAG)).append(Const.CR);
-
-    return XmlFormatter.format(xml.toString());
+    return XmlHandler.getLicenseHeader(variables)
+        + XmlFormatter.format(
+            XmlHandler.aroundTag(XML_TAG, XmlMetadataUtil.serializeObjectToXml(this)));
   }
 
   /**
    * Parses a file containing the XML that describes the pipeline.
    *
-   * @param fname The filename
+   * @param filename The filename
    * @param metadataProvider the metadata store to reference (or null if there is none)
    * @param parentVariableSpace the parent variable variables to use during PipelineMeta
    *     construction
@@ -1646,34 +1495,32 @@ public class PipelineMeta extends AbstractMeta
    *     exception in that case)
    */
   public PipelineMeta(
-      String fname, IHopMetadataProvider metadataProvider, IVariables parentVariableSpace)
+      String filename, IHopMetadataProvider metadataProvider, IVariables parentVariableSpace)
       throws HopXmlException, HopMissingPluginsException {
-    // if fname is not provided, there's not much we can do, throw an exception
-    if (StringUtils.isBlank(fname)) {
+    // if filename is not provided, there's not much we can do, throw an exception
+    if (StringUtils.isBlank(filename)) {
       throw new HopXmlException(
           BaseMessages.getString(PKG, "PipelineMeta.Exception.MissingXMLFilePath"));
     }
-
     if (metadataProvider == null) {
       throw new HopXmlException(
           "API error: metadata provider can't be null. When loading a pipeline Hop needs to be able to reference external metadata objects");
     }
-
     this.metadataProvider = metadataProvider;
 
-    loadXml(fname, metadataProvider, parentVariableSpace);
+    loadXml(filename, metadataProvider, parentVariableSpace);
   }
 
   public void loadXml(
-      String fname, IHopMetadataProvider metadataProvider, IVariables parentVariableSpace)
+      String filename, IHopMetadataProvider metadataProvider, IVariables parentVariableSpace)
       throws HopXmlException, HopMissingPluginsException {
     // OK, try to load using the VFS stuff...
-    Document doc = null;
+    Document doc;
     try {
-      final FileObject pipelineFile = HopVfs.getFileObject(fname);
+      final FileObject pipelineFile = HopVfs.getFileObject(filename);
       if (!pipelineFile.exists()) {
         throw new HopXmlException(
-            BaseMessages.getString(PKG, "PipelineMeta.Exception.InvalidXMLPath", fname));
+            BaseMessages.getString(PKG, "PipelineMeta.Exception.InvalidXMLPath", filename));
       }
       doc = XmlHandler.loadXmlFile(pipelineFile);
     } catch (HopXmlException ke) {
@@ -1681,7 +1528,7 @@ public class PipelineMeta extends AbstractMeta
       throw ke;
     } catch (HopException | FileSystemException e) {
       throw new HopXmlException(
-          BaseMessages.getString(PKG, CONST_ERROR_OPENING_OR_VALIDATING, fname), e);
+          BaseMessages.getString(PKG, CONST_ERROR_OPENING_OR_VALIDATING, filename), e);
     }
 
     if (doc != null) {
@@ -1690,15 +1537,14 @@ public class PipelineMeta extends AbstractMeta
 
       if (pipelineNode == null) {
         throw new HopXmlException(
-            BaseMessages.getString(PKG, "PipelineMeta.Exception.NotValidPipelineXML", fname));
+            BaseMessages.getString(PKG, "PipelineMeta.Exception.NotValidPipelineXML", filename));
       }
 
       // Load from this node...
-      loadXml(pipelineNode, fname, metadataProvider, parentVariableSpace);
-
+      loadXml(pipelineNode, filename, metadataProvider, parentVariableSpace);
     } else {
       throw new HopXmlException(
-          BaseMessages.getString(PKG, CONST_ERROR_OPENING_OR_VALIDATING, fname));
+          BaseMessages.getString(PKG, CONST_ERROR_OPENING_OR_VALIDATING, filename));
     }
   }
 
@@ -1757,185 +1603,7 @@ public class PipelineMeta extends AbstractMeta
     this.metadataProvider = metadataProvider; // Remember this as the primary meta store.
 
     try {
-      try {
-        // Clear the pipeline
-        clear();
-
-        // Set the filename here, so it can be used in variables for ALL aspects of the pipeline
-        // FIX.
-        //
-        setFilename(filename);
-
-        // Read the notes...
-        Node notepadsNode = XmlHandler.getSubNode(pipelineNode, XML_TAG_NOTEPADS);
-        List<Node> notepadNodes = XmlHandler.getNodes(notepadsNode, NotePadMeta.XML_TAG);
-        for (Node notepadNode : notepadNodes) {
-          NotePadMeta ni = new NotePadMeta(notepadNode);
-          notes.add(ni);
-        }
-
-        // Handle Transforms
-        //
-        List<Node> transformNodes = XmlHandler.getNodes(pipelineNode, TransformMeta.XML_TAG);
-
-        if (LogChannel.GENERAL.isDebug()) {
-          LogChannel.GENERAL.logDebug(
-              BaseMessages.getString(PKG, "PipelineMeta.Log.ReadingTransforms")
-                  + transformNodes.size()
-                  + " transforms...");
-        }
-        for (Node transformNode : transformNodes) {
-          TransformMeta transformMeta = new TransformMeta(transformNode, metadataProvider);
-          transformMeta.setParentPipelineMeta(this); // for tracing, retain hierarchy
-
-          if (transformMeta.isMissing()) {
-            addMissingPipeline((Missing) transformMeta.getTransform());
-          }
-          addOrReplaceTransform(transformMeta);
-        }
-
-        // Read the error handling code of the transforms...
-        //
-        Node errorHandlingNode =
-            XmlHandler.getSubNode(pipelineNode, XML_TAG_TRANSFORM_ERROR_HANDLING);
-        int nrErrorHandlers =
-            XmlHandler.countNodes(errorHandlingNode, TransformErrorMeta.XML_ERROR_TAG);
-        for (int i = 0; i < nrErrorHandlers; i++) {
-          Node transformErrorMetaNode =
-              XmlHandler.getSubNodeByNr(errorHandlingNode, TransformErrorMeta.XML_ERROR_TAG, i);
-          TransformErrorMeta transformErrorMeta =
-              new TransformErrorMeta(transformErrorMetaNode, transforms);
-          if (transformErrorMeta.getSourceTransform() != null) {
-            transformErrorMeta
-                .getSourceTransform()
-                .setTransformErrorMeta(transformErrorMeta); // a bit of a trick, I know.
-          }
-        }
-
-        // Handle Hops
-        //
-        Node orderNode = XmlHandler.getSubNode(pipelineNode, XML_TAG_ORDER);
-        List<Node> hopNodes = XmlHandler.getNodes(orderNode, BaseHopMeta.XML_HOP_TAG);
-
-        if (LogChannel.GENERAL.isDebug()) {
-          LogChannel.GENERAL.logDebug(
-              BaseMessages.getString(PKG, "PipelineMeta.Log.WeHaveHops")
-                  + hopNodes.size()
-                  + " hops...");
-        }
-
-        for (Node hopNode : hopNodes) {
-          PipelineHopMeta hopinf = new PipelineHopMeta(hopNode, transforms);
-          hopinf.setErrorHop(isErrorNode(errorHandlingNode, hopNode));
-          addPipelineHop(hopinf);
-        }
-
-        // Have all StreamValueLookups, etc. reference the correct source transforms...
-        //
-        for (int i = 0; i < nrTransforms(); i++) {
-          TransformMeta transformMeta = getTransform(i);
-          ITransformMeta sii = transformMeta.getTransform();
-          if (sii != null) {
-            sii.searchInfoAndTargetTransforms(transforms);
-          }
-        }
-
-        //
-        // get pipeline info:
-        //
-        Node infoNode = XmlHandler.getSubNode(pipelineNode, XML_TAG_INFO);
-
-        // Name
-        //
-        info.setName(XmlHandler.getTagValue(infoNode, "name"));
-
-        info.setNameSynchronizedWithFilename(
-            "Y".equalsIgnoreCase(XmlHandler.getTagValue(infoNode, "name_sync_with_filename")));
-
-        // description
-        //
-        info.setDescription(XmlHandler.getTagValue(infoNode, CONST_DESCRIPTION));
-
-        // extended description
-        //
-        info.setExtendedDescription(XmlHandler.getTagValue(infoNode, "extended_description"));
-
-        // pipeline version
-        //
-        info.setPipelineVersion(XmlHandler.getTagValue(infoNode, "pipeline_version"));
-
-        // pipeline status
-        //
-        pipelineStatus = Const.toInt(XmlHandler.getTagValue(infoNode, "pipeline_status"), -1);
-
-        String pipelineTypeCode = XmlHandler.getTagValue(infoNode, "pipeline_type");
-        info.setPipelineType(PipelineType.getPipelineTypeByCode(pipelineTypeCode));
-
-        // Read the named parameters.
-        Node paramsNode = XmlHandler.getSubNode(infoNode, XML_TAG_PARAMETERS);
-        int nrParams = XmlHandler.countNodes(paramsNode, CONST_PARAMETER);
-
-        for (int i = 0; i < nrParams; i++) {
-          Node paramNode = XmlHandler.getSubNodeByNr(paramsNode, CONST_PARAMETER, i);
-
-          String paramName = XmlHandler.getTagValue(paramNode, "name");
-          String defaultValue = XmlHandler.getTagValue(paramNode, "default_value");
-          String descr = XmlHandler.getTagValue(paramNode, CONST_DESCRIPTION);
-
-          addParameterDefinition(paramName, defaultValue, descr);
-        }
-
-        // Performance monitoring for transforms...
-        //
-        info.setCapturingTransformPerformanceSnapShots(
-            "Y"
-                .equalsIgnoreCase(
-                    XmlHandler.getTagValue(infoNode, "capture_transform_performance")));
-        info.setTransformPerformanceCapturingDelay(
-            Const.toLong(
-                XmlHandler.getTagValue(infoNode, "transform_performance_capturing_delay"), 1000));
-        info.setTransformPerformanceCapturingSizeLimit(
-            XmlHandler.getTagValue(infoNode, "transform_performance_capturing_size_limit"));
-
-        // Created user/date
-        info.setCreatedUser(XmlHandler.getTagValue(infoNode, "created_user"));
-        String createDate = XmlHandler.getTagValue(infoNode, "created_date");
-        if (createDate != null) {
-          info.setCreatedDate(XmlHandler.stringToDate(createDate));
-        }
-
-        // Changed user/date
-        info.setModifiedUser(XmlHandler.getTagValue(infoNode, "modified_user"));
-        String modDate = XmlHandler.getTagValue(infoNode, "modified_date");
-        if (modDate != null) {
-          info.setModifiedDate(XmlHandler.stringToDate(modDate));
-        }
-
-        if (LogChannel.GENERAL.isDebug()) {
-          LogChannel.GENERAL.logDebug(
-              BaseMessages.getString(PKG, "PipelineMeta.Log.NumberOfTransformReaded")
-                  + nrTransforms());
-          LogChannel.GENERAL.logDebug(
-              BaseMessages.getString(PKG, "PipelineMeta.Log.NumberOfHopsReaded")
-                  + nrPipelineHops());
-        }
-        sortTransforms();
-
-        // Load the attribute groups map
-        //
-        attributesMap =
-            AttributesUtil.loadAttributes(
-                XmlHandler.getSubNode(pipelineNode, AttributesUtil.XML_TAG));
-
-      } catch (HopXmlException xe) {
-        throw new HopXmlException(
-            BaseMessages.getString(PKG, "PipelineMeta.Exception.ErrorReadingPipeline"), xe);
-      } catch (Exception e) {
-        throw new HopXmlException(e);
-      } finally {
-        ExtensionPointHandler.callExtensionPoint(
-            LogChannel.GENERAL, variables, HopExtensionPoint.PipelineMetaLoaded.id, this);
-      }
+      deSerializeXml(pipelineNode, filename, metadataProvider, variables);
     } catch (Exception e) {
       // See if we have missing plugins to report, those take precedence!
       //
@@ -1951,6 +1619,118 @@ public class PipelineMeta extends AbstractMeta
       }
     }
     clearChanged();
+  }
+
+  /**
+   * Replace this pipeline's persisted content from a snapshot XML node. Used by GUI undo/redo.
+   *
+   * <p>Does not fire {@code PipelineMetaLoaded} (undo is not a file open) and does not call {@link
+   * #clearChanged()} — the caller decides the dirty flag.
+   */
+  public void restoreContentFromXml(
+      Node pipelineNode, String filename, IHopMetadataProvider metadataProvider)
+      throws HopException {
+    this.metadataProvider = metadataProvider;
+    clear();
+    setFilename(filename);
+    XmlMetadataUtil.deSerializeFromXml(
+        null, null, pipelineNode, PipelineMeta.class, this, metadataProvider);
+    lookupReferencesAfterLoading();
+  }
+
+  private void deSerializeXml(
+      Node pipelineNode,
+      String filename,
+      IHopMetadataProvider metadataProvider,
+      IVariables variables)
+      throws HopException {
+    try {
+      // Clear the pipeline
+      clear();
+
+      // Set the filename here, so it can be used in variables for ALL aspects of the pipeline.
+      //
+      setFilename(filename);
+
+      // De-serialize the XML using @HopMetadataProperty annotations
+      //
+      XmlMetadataUtil.deSerializeFromXml(
+          null, null, pipelineNode, PipelineMeta.class, this, metadataProvider);
+
+      lookupReferencesAfterLoading();
+    } catch (HopXmlException xe) {
+      throw new HopXmlException(
+          BaseMessages.getString(PKG, "PipelineMeta.Exception.ErrorReadingPipeline"), xe);
+    } catch (Exception e) {
+      throw new HopXmlException(e);
+    } finally {
+      ExtensionPointHandler.callExtensionPoint(
+          LogChannel.GENERAL, variables, HopExtensionPoint.PipelineMetaLoaded.id, this);
+    }
+  }
+
+  /**
+   * After loading there can still be some references to other transforms or indeed this pipeline
+   * that need to be set. This is happening here.
+   */
+  public void lookupReferencesAfterLoading() {
+    missingPipeline = null;
+    for (TransformMeta transformMeta : transforms) {
+      ITransformMeta iTransform = transformMeta.getTransform();
+
+      // Search info and target transforms.
+      iTransform.searchInfoAndTargetTransforms(transforms);
+
+      // Also set the parent pipeline to which this transform belongs.
+      // This is rarely used, for example in getTableFields.getTableFields()
+      transformMeta.setParentPipelineMeta(this);
+
+      // Keep track of the transforms whose plugin isn't installed so we can warn about them.
+      //
+      if (iTransform instanceof Missing missing) {
+        addMissingPipeline(missing);
+      }
+    }
+    syncTransformErrorHandlingWithHops();
+  }
+
+  /**
+   * Align {@link TransformErrorMeta} with the enabled state of the hop to the error target.
+   * Pipelines saved before error hops were flagged in hop metadata can have error handling marked
+   * enabled while the hop to the target transform is disabled.
+   */
+  public void syncTransformErrorHandlingWithHops() {
+    for (TransformMeta transformMeta : transforms) {
+      TransformErrorMeta errorMeta = transformMeta.getTransformErrorMeta();
+      if (errorMeta == null || errorMeta.getTargetTransform() == null) {
+        continue;
+      }
+      PipelineHopMeta hop = findPipelineHop(transformMeta, errorMeta.getTargetTransform(), true);
+      if (hop != null) {
+        errorMeta.setEnabled(hop.isEnabled());
+      }
+      applyDefaultErrorHandlingFieldNamesIfUnset(errorMeta);
+    }
+  }
+
+  /**
+   * Legacy pipelines often enable error handling without naming the extra error columns, so
+   * rejected rows carry no description field for downstream transforms (e.g. Write to log).
+   */
+  private static void applyDefaultErrorHandlingFieldNamesIfUnset(TransformErrorMeta errorMeta) {
+    if (!errorMeta.isEnabled()) {
+      return;
+    }
+    if (!Utils.isEmpty(errorMeta.getNrErrorsValueName())
+        || !Utils.isEmpty(errorMeta.getErrorDescriptionsValueName())
+        || !Utils.isEmpty(errorMeta.getErrorFieldsValueName())
+        || !Utils.isEmpty(errorMeta.getErrorCodesValueName())) {
+      return;
+    }
+    // error nr, error code, error description
+    errorMeta.setNrErrorsValueName(TransformErrorMeta.FIELD_ERROR_ROW);
+    errorMeta.setErrorCodesValueName(TransformErrorMeta.FIELD_ERROR_CODE);
+    errorMeta.setErrorDescriptionsValueName(TransformErrorMeta.FIELD_ERROR_DESCRIPTION);
   }
 
   /**
@@ -2028,14 +1808,14 @@ public class PipelineMeta extends AbstractMeta
     changedTransforms = false;
     changedHops = false;
 
-    for (int i = 0; i < nrTransforms(); i++) {
-      getTransform(i).setChanged(false);
-      if (getTransform(i).getTransformPartitioningMeta() != null) {
-        getTransform(i).getTransformPartitioningMeta().hasChanged(false);
+    for (TransformMeta transform : transforms) {
+      transform.setChanged(false);
+      if (transform.getTransformPartitioningMeta() != null) {
+        transform.getTransformPartitioningMeta().hasChanged(false);
       }
     }
-    for (int i = 0; i < nrPipelineHops(); i++) {
-      getPipelineHop(i).setChanged(false);
+    for (PipelineHopMeta hop : hops) {
+      hop.setChanged(false);
     }
 
     super.clearChanged();
@@ -2056,12 +1836,12 @@ public class PipelineMeta extends AbstractMeta
       return true;
     }
 
-    for (int i = 0; i < nrTransforms(); i++) {
-      if (getTransform(i).hasChanged()) {
+    for (TransformMeta transform : transforms) {
+      if (transform.hasChanged()) {
         return true;
       }
-      if (getTransform(i).getTransformPartitioningMeta() != null
-          && getTransform(i).getTransformPartitioningMeta().hasChanged()) {
+      if (transform.getTransformPartitioningMeta() != null
+          && transform.getTransformPartitioningMeta().hasChanged()) {
         return true;
       }
     }
@@ -2078,45 +1858,9 @@ public class PipelineMeta extends AbstractMeta
       return true;
     }
 
-    for (int i = 0; i < nrPipelineHops(); i++) {
-      PipelineHopMeta hi = getPipelineHop(i);
-      if (hi.hasChanged()) {
+    for (PipelineHopMeta hop : hops) {
+      if (hop.hasChanged()) {
         return true;
-      }
-    }
-    return false;
-  }
-
-  private boolean isErrorNode(Node errorHandingNode, Node checkNode) {
-    if (errorHandingNode != null) {
-      NodeList errors = errorHandingNode.getChildNodes();
-
-      Node nodeHopFrom = XmlHandler.getSubNode(checkNode, BaseHopMeta.XML_FROM_TAG);
-      Node nodeHopTo = XmlHandler.getSubNode(checkNode, BaseHopMeta.XML_TO_TAG);
-
-      int i = 0;
-      while (i < errors.getLength()) {
-
-        Node errorNode = errors.item(i);
-
-        if (!TransformErrorMeta.XML_ERROR_TAG.equals(errorNode.getNodeName())) {
-          i++;
-          continue;
-        }
-
-        Node errorSourceNode =
-            XmlHandler.getSubNode(errorNode, TransformErrorMeta.XML_SOURCE_TRANSFORM_TAG);
-        Node errorTagetNode =
-            XmlHandler.getSubNode(errorNode, TransformErrorMeta.XML_TARGET_TRANSFORM_TAG);
-
-        String sourceContent = errorSourceNode.getTextContent().trim();
-        String tagetContent = errorTagetNode.getTextContent().trim();
-
-        if (sourceContent.equals(nodeHopFrom.getTextContent().trim())
-            && tagetContent.equals(nodeHopTo.getTextContent().trim())) {
-          return true;
-        }
-        i++;
       }
     }
     return false;
@@ -2171,9 +1915,7 @@ public class PipelineMeta extends AbstractMeta
     checkedEntries.add(transformMeta);
 
     List<TransformMeta> prevTransforms = findPreviousTransforms(transformMeta, true);
-    int nr = prevTransforms.size();
-    for (int i = 0; i < nr; i++) {
-      TransformMeta prevTransformMeta = prevTransforms.get(i);
+    for (TransformMeta prevTransformMeta : prevTransforms) {
       if (prevTransformMeta != null
           && (prevTransformMeta.equals(lookup)
               || (!checkedEntries.contains(prevTransformMeta)
@@ -2192,14 +1934,11 @@ public class PipelineMeta extends AbstractMeta
 
   /** Mark all transforms in the pipeline as selected. */
   public void selectAll() {
-    int i;
-    for (i = 0; i < nrTransforms(); i++) {
-      TransformMeta transformMeta = getTransform(i);
-      transformMeta.setSelected(true);
+    for (TransformMeta transform : transforms) {
+      transform.setSelected(true);
     }
-    for (i = 0; i < nrNotes(); i++) {
-      NotePadMeta ni = getNote(i);
-      ni.setSelected(true);
+    for (NotePadMeta note : getNotes()) {
+      note.setSelected(true);
     }
 
     setChanged();
@@ -2208,14 +1947,11 @@ public class PipelineMeta extends AbstractMeta
 
   /** Clear the selection of all transforms. */
   public void unselectAll() {
-    int i;
-    for (i = 0; i < nrTransforms(); i++) {
-      TransformMeta transformMeta = getTransform(i);
-      transformMeta.setSelected(false);
+    for (TransformMeta transform : transforms) {
+      transform.setSelected(false);
     }
-    for (i = 0; i < nrNotes(); i++) {
-      NotePadMeta ni = getNote(i);
-      ni.setSelected(false);
+    for (NotePadMeta note : getNotes()) {
+      note.setSelected(false);
     }
   }
 
@@ -2232,7 +1968,7 @@ public class PipelineMeta extends AbstractMeta
       points.add(new Point(p.x, p.y)); // explicit copy of location
     }
 
-    return points.toArray(new Point[points.size()]);
+    return points.toArray(new Point[0]);
   }
 
   /**
@@ -2248,7 +1984,7 @@ public class PipelineMeta extends AbstractMeta
       points.add(new Point(p.x, p.y)); // explicit copy of location
     }
 
-    return points.toArray(new Point[points.size()]);
+    return points.toArray(new Point[0]);
   }
 
   /**
@@ -2374,13 +2110,11 @@ public class PipelineMeta extends AbstractMeta
    * @return An array of transform names.
    */
   public String[] getTransformNames() {
-    String[] retval = new String[nrTransforms()];
-
+    String[] transformNames = new String[nrTransforms()];
     for (int i = 0; i < nrTransforms(); i++) {
-      retval[i] = getTransform(i).getName();
+      transformNames[i] = getTransform(i).getName();
     }
-
-    return retval;
+    return transformNames;
   }
 
   /**
@@ -2415,8 +2149,7 @@ public class PipelineMeta extends AbstractMeta
     // Normal transforms
     //
     List<TransformMeta> previousTransforms = findPreviousTransforms(startTransform, false);
-    for (int i = 0; i < previousTransforms.size(); i++) {
-      TransformMeta transformMeta = previousTransforms.get(i);
+    for (TransformMeta transformMeta : previousTransforms) {
       if (transformMeta.equals(transformToFind)) {
         loopCache.put(key, true);
         return true;
@@ -2432,8 +2165,7 @@ public class PipelineMeta extends AbstractMeta
 
     // Info transforms
     List<TransformMeta> infoTransforms = findPreviousTransforms(startTransform, true);
-    for (int i = 0; i < infoTransforms.size(); i++) {
-      TransformMeta transformMeta = infoTransforms.get(i);
+    for (TransformMeta transformMeta : infoTransforms) {
       if (transformMeta.equals(transformToFind)) {
         loopCache.put(key, true);
         return true;
@@ -2449,22 +2181,6 @@ public class PipelineMeta extends AbstractMeta
 
     loopCache.put(key, false);
     return false;
-  }
-
-  /** Puts the transforms in alphabetical order. */
-  public void sortTransforms() {
-    try {
-      Collections.sort(transforms);
-    } catch (Exception e) {
-      LogChannel.GENERAL.logError(
-          BaseMessages.getString(PKG, "PipelineMeta.Exception.ErrorOfSortingTransforms") + e);
-      LogChannel.GENERAL.logError(Const.getStackTracker(e));
-    }
-  }
-
-  /** Sorts all the hops in the pipeline. */
-  public void sortHops() {
-    Collections.sort(hops);
   }
 
   /** The previous count. */
@@ -2496,12 +2212,13 @@ public class PipelineMeta extends AbstractMeta
     for (TransformMeta transformMeta : transforms) {
       // What are the previous transforms? (cached version for performance)
       //
-      List<TransformMeta> prevTransforms = previousCache.get(transformMeta);
-      if (prevTransforms == null) {
-        prevTransforms = findPreviousTransforms(transformMeta);
-        prevCount++;
-        previousCache.put(transformMeta, prevTransforms);
-      }
+      List<TransformMeta> prevTransforms =
+          previousCache.computeIfAbsent(
+              transformMeta,
+              f -> {
+                prevCount++;
+                return findPreviousTransforms(transformMeta);
+              });
 
       // Now get the previous transforms recursively, store them in the transform map
       //
@@ -2516,8 +2233,7 @@ public class PipelineMeta extends AbstractMeta
       }
     }
 
-    Collections.sort(
-        transforms,
+    transforms.sort(
         (o1, o2) -> {
           Map<TransformMeta, Boolean> beforeMap = transformMap.get(o1);
           if (beforeMap != null) {
@@ -2572,12 +2288,13 @@ public class PipelineMeta extends AbstractMeta
 
     // Figure out all the previous transforms as well, they all need to go in there...
     //
-    List<TransformMeta> prevTransforms = previousCache.get(previousTransformMeta);
-    if (prevTransforms == null) {
-      prevTransforms = findPreviousTransforms(previousTransformMeta);
-      prevCount++;
-      previousCache.put(previousTransformMeta, prevTransforms);
-    }
+    List<TransformMeta> prevTransforms =
+        previousCache.computeIfAbsent(
+            previousTransformMeta,
+            e -> {
+              prevCount++;
+              return findPreviousTransforms(previousTransformMeta);
+            });
 
     // Now, get the previous transforms for transformMeta recursively...
     // We only do this when the beforeMap is not known yet...
@@ -2628,20 +2345,16 @@ public class PipelineMeta extends AbstractMeta
   public void analyseImpact(
       IVariables variables, List<DatabaseImpact> impact, IProgressMonitor monitor)
       throws HopTransformException {
-    if (monitor != null) {
-      monitor.beginTask(
-          BaseMessages.getString(PKG, "PipelineMeta.Monitor.DeterminingImpactTask.Title"),
-          nrTransforms());
-    }
+    monitorBeginTask(
+        monitor, nrTransforms(), "PipelineMeta.Monitor.GettingFieldsFromTransformTask.Title");
+
     boolean stop = false;
     for (int i = 0; i < nrTransforms() && !stop; i++) {
-      if (monitor != null) {
-        monitor.subTask(
-            BaseMessages.getString(PKG, "PipelineMeta.Monitor.LookingAtTransformTask.Title")
-                + (i + 1)
-                + "/"
-                + nrTransforms());
-      }
+      monitorSubTask(
+          monitor,
+          "PipelineMeta.Monitor.LookingAtTransformTask.Title",
+          (i + 1) + "/" + nrTransforms());
+
       TransformMeta transformMeta = getTransform(i);
 
       IRowMeta prev = getPrevTransformFields(variables, transformMeta);
@@ -2651,7 +2364,12 @@ public class PipelineMeta extends AbstractMeta
       if (lu != null) {
         infoRowMeta = getTransformFields(variables, lu);
       } else {
-        infoRowMeta = iTransformMeta.getTableFields(variables);
+        try {
+          infoRowMeta = iTransformMeta.getTableFields(variables);
+        } catch (HopDatabaseException dbe) {
+          throw new HopTransformException(
+              "Error getting table fields from in transform " + transformMeta.getName(), dbe);
+        }
       }
 
       iTransformMeta.analyseImpact(
@@ -2708,22 +2426,17 @@ public class PipelineMeta extends AbstractMeta
    */
   public List<SqlStatement> getSqlStatements(IVariables variables, IProgressMonitor monitor)
       throws HopTransformException {
-    if (monitor != null) {
-      monitor.beginTask(
-          BaseMessages.getString(PKG, "PipelineMeta.Monitor.GettingTheSQLForPipelineTask.Title"),
-          nrTransforms() + 1);
-    }
+    monitorBeginTask(
+        monitor, nrTransforms() + 1, "PipelineMeta.Monitor.GettingTheSQLForPipelineTask.Title");
     List<SqlStatement> stats = new ArrayList<>();
 
     for (int i = 0; i < nrTransforms(); i++) {
       TransformMeta transformMeta = getTransform(i);
-      if (monitor != null) {
-        monitor.subTask(
-            BaseMessages.getString(
-                PKG,
-                "PipelineMeta.Monitor.GettingTheSQLForTransformTask.Title",
-                "" + transformMeta));
-      }
+      monitorSubTask(
+          monitor,
+          "PipelineMeta.Monitor.GettingTheSQLForTransformTask.Title",
+          transformMeta.toString());
+
       IRowMeta prev = getPrevTransformFields(variables, transformMeta);
       SqlStatement sql =
           transformMeta
@@ -2745,18 +2458,17 @@ public class PipelineMeta extends AbstractMeta
   }
 
   /**
-   * Get the Sql statements (needed to run this pipeline) as a single String.
+   * Get the SQL statements (needed to run this pipeline) as a single String.
    *
-   * @return the Sql statements needed to run this pipeline
-   * @throws HopTransformException if any errors occur during Sql statement generation
+   * @return the SQL statements needed to run this pipeline
+   * @throws HopTransformException if any errors occur during SQL statement generation
    */
   public String getSqlStatementsString(IVariables variables) throws HopTransformException {
     StringBuilder sql = new StringBuilder();
-    List<SqlStatement> stats = getSqlStatements(variables);
-    for (int i = 0; i < stats.size(); i++) {
-      SqlStatement stat = stats.get(i);
-      if (!stat.hasError() && stat.hasSql()) {
-        sql.append(stat.getSql());
+    List<SqlStatement> statements = getSqlStatements(variables);
+    for (SqlStatement statement : statements) {
+      if (!statement.hasError() && statement.hasSql()) {
+        sql.append(statement.getSql());
       }
     }
 
@@ -2764,11 +2476,11 @@ public class PipelineMeta extends AbstractMeta
   }
 
   /**
-   * Checks all the transforms and fills a List of (CheckResult) remarks.
+   * Checks all the transforms and fills a List with CheckResult remarks.
    *
    * @param remarks The remarks list to add to.
    * @param onlySelected true to check only the selected transforms, false for all transforms
-   * @param monitor a progress monitor listener to be updated as the Sql statements are generated
+   * @param monitor a progress monitor listener to be updated as the SQL statements are generated
    */
   public void checkTransforms(
       List<ICheckResult> remarks,
@@ -2786,9 +2498,10 @@ public class PipelineMeta extends AbstractMeta
 
       Map<IValueMeta, String> values = new Hashtable<>();
 
-      List<TransformMeta> transforms = (onlySelected) ? getSelectedTransforms() : getTransforms();
+      List<TransformMeta> transformsToCheck =
+          (onlySelected) ? getSelectedTransforms() : getTransforms();
 
-      TransformMeta[] transformArray = transforms.toArray(new TransformMeta[0]);
+      TransformMeta[] transformArray = transformsToCheck.toArray(new TransformMeta[0]);
 
       ExtensionPointHandler.callExtensionPoint(
           LogChannel.GENERAL,
@@ -2800,10 +2513,10 @@ public class PipelineMeta extends AbstractMeta
 
       monitor.beginTask(
           BaseMessages.getString(PKG, "PipelineMeta.Monitor.VerifyingThisPipelineTask.Title"),
-          transforms.size());
+          transformsToCheck.size());
 
       int worked = 1;
-      for (TransformMeta transformMeta : transforms) {
+      for (TransformMeta transformMeta : transformsToCheck) {
 
         if (stopChecking) {
           break;
@@ -2836,18 +2549,17 @@ public class PipelineMeta extends AbstractMeta
                   transformMeta));
         }
 
-        int nrinfo = findNrInfoTransforms(transformMeta);
+        int nrInfoTransforms = findNrInfoTransforms(transformMeta);
         TransformMeta[] infoTransform = null;
-        if (nrinfo > 0) {
+        if (nrInfoTransforms > 0) {
           infoTransform = getInfoTransform(transformMeta);
         }
 
-        IRowMeta info = null;
+        IRowMeta infoRowMeta = null;
         if (infoTransform != null) {
           try {
-            info = getTransformFields(variables, infoTransform);
+            infoRowMeta = getTransformFields(variables, infoTransform);
           } catch (HopTransformException kse) {
-            info = null;
             CheckResult cr =
                 new CheckResult(
                     ICheckResult.TYPE_RESULT_ERROR,
@@ -2861,7 +2573,7 @@ public class PipelineMeta extends AbstractMeta
           }
         }
 
-        // The previous fields from non-informative transforms:
+        // The previous fields from non-informative transformsToCheck:
         IRowMeta prev = null;
         try {
           prev = getPrevTransformFields(variables, transformMeta);
@@ -2884,7 +2596,7 @@ public class PipelineMeta extends AbstractMeta
         }
 
         if (isTransformUsedInPipelineHops(transformMeta) || getTransforms().size() == 1) {
-          // Get the input & output transforms!
+          // Get the input & output transformsToCheck!
           // Copy to arrays:
           String[] input = getPrevTransformNames(transformMeta);
           String[] output = getNextTransformNames(transformMeta);
@@ -2897,7 +2609,7 @@ public class PipelineMeta extends AbstractMeta
               new CheckTransformsExtension(
                   remarks, variables, this, new TransformMeta[] {transformMeta}, metadataProvider));
           transformMeta.check(
-              remarks, this, prev, input, output, info, variables, metadataProvider);
+              remarks, this, prev, input, output, infoRowMeta, variables, metadataProvider);
           ExtensionPointHandler.callExtensionPoint(
               LogChannel.GENERAL,
               variables,
@@ -2942,7 +2654,7 @@ public class PipelineMeta extends AbstractMeta
               }
             }
 
-            // Check if 2 transforms with the same name are entering the transform...
+            // Check if 2 transformsToCheck with the same name are entering the transform...
             if (prev.size() > 1) {
               String[] fieldNames = prev.getFieldNames();
               String[] sortedNames = Const.sortStrings(fieldNames);
@@ -3009,8 +2721,9 @@ public class PipelineMeta extends AbstractMeta
               "PipelineMeta.Monitor.CheckingForDatabaseUnfriendlyCharactersInFieldNamesTask.Title"));
 
       if (!values.isEmpty()) {
-        for (IValueMeta valueMeta : values.keySet()) {
-          String message = values.get(valueMeta);
+        for (Map.Entry<IValueMeta, String> entry : values.entrySet()) {
+          IValueMeta valueMeta = entry.getKey();
+          String message = entry.getValue();
           CheckResult cr =
               new CheckResult(
                   ICheckResult.TYPE_RESULT_WARNING, message, findTransform(valueMeta.getOrigin()));
@@ -3025,6 +2738,20 @@ public class PipelineMeta extends AbstractMeta
         remarks.add(cr);
       }
 
+      // Bounded-buffer deadlock risk on split–rejoin multi-input transforms (classic engine)
+      //
+      List<BufferDeadlockRisk> deadlockRisks = PipelineBufferDeadlockAnalyzer.analyze(this);
+      for (BufferDeadlockRisk risk : deadlockRisks) {
+        remarks.add(
+            new CheckResult(
+                ICheckResult.TYPE_RESULT_WARNING,
+                BaseMessages.getString(
+                    PKG,
+                    "PipelineMeta.CheckResult.TypeResultWarning.BufferDeadlockRisk.Description",
+                    risk.formatMessage()),
+                risk.reconvergence()));
+      }
+
       ExtensionPointHandler.callExtensionPoint(
           LogChannel.GENERAL,
           variables,
@@ -3033,7 +2760,7 @@ public class PipelineMeta extends AbstractMeta
 
       monitor.done();
     } catch (Exception e) {
-      throw new RuntimeException("Error checking pipeline", e);
+      throw new HopRuntimeException("Error checking pipeline", e);
     }
   }
 
@@ -3053,24 +2780,6 @@ public class PipelineMeta extends AbstractMeta
    */
   public void setPipelineVersion(String pipelineVersion) {
     info.setPipelineVersion(pipelineVersion);
-  }
-
-  /**
-   * Sets the status of the pipeline.
-   *
-   * @param pipelineStatus The new status description of the pipeline
-   */
-  public void setPipelineStatus(int pipelineStatus) {
-    this.pipelineStatus = pipelineStatus;
-  }
-
-  /**
-   * Gets the status of the pipeline.
-   *
-   * @return The status of the pipeline
-   */
-  public int getPipelineStatus() {
-    return pipelineStatus;
   }
 
   /**
@@ -3260,9 +2969,10 @@ public class PipelineMeta extends AbstractMeta
     List<String> varList = new ArrayList<>();
 
     // Look around in the strings, see what we find...
-    for (int i = 0; i < stringList.size(); i++) {
-      StringSearchResult result = stringList.get(i);
-      StringUtil.getUsedVariables(result.getString(), varList, false);
+    // Exclude variable resolvers (#{...}): their content is a resolver name plus a secret path, not
+    // a user-settable variable, so it shouldn't end up in the run options variable list.
+    for (StringSearchResult result : stringList) {
+      StringUtil.getUsedVariables(result.getString(), varList, false, false);
     }
 
     return varList;
@@ -3285,8 +2995,7 @@ public class PipelineMeta extends AbstractMeta
     if (nrPrevious > 1) {
       IRowMeta referenceRow = null;
       // See if all previous transforms send out the same rows...
-      for (int i = 0; i < nrPrevious; i++) {
-        TransformMeta previousTransform = prevTransforms.get(i);
+      for (TransformMeta previousTransform : prevTransforms) {
         try {
           IRowMeta row =
               getTransformFields(
@@ -3315,6 +3024,9 @@ public class PipelineMeta extends AbstractMeta
     setInternalFilenameHopVariables(variables);
     setInternalNameHopVariable(variables);
     setInternalEntryCurrentDirectory(variables);
+
+    HopVersionProvider versionProvider = new HopVersionProvider();
+    variables.setVariable(Const.HOP_VERSION, versionProvider.getVersion()[0]);
   }
 
   /**
@@ -3375,91 +3087,6 @@ public class PipelineMeta extends AbstractMeta
   }
 
   /**
-   * Finds the mapping input transform with the specified name. If no mapping input transform is
-   * found, null is returned
-   *
-   * @param transformName the name to search for
-   * @return the transform meta-data corresponding to the desired mapping input transform, or null
-   *     if no transform was found
-   * @throws HopTransformException if any errors occur during the search
-   */
-  public TransformMeta findMappingInputTransform(String transformName)
-      throws HopTransformException {
-    if (!Utils.isEmpty(transformName)) {
-      TransformMeta transformMeta =
-          findTransform(transformName); // TODO verify that it's a mapping input!!
-      if (transformMeta == null) {
-        throw new HopTransformException(
-            BaseMessages.getString(
-                PKG, "PipelineMeta.Exception.TransformNameNotFound", transformName));
-      }
-      return transformMeta;
-    } else {
-      // Find the first mapping input transform that fits the bill.
-      TransformMeta transformMeta = null;
-      for (TransformMeta mappingTransform : transforms) {
-        if (mappingTransform.getTransformPluginId().equals("MappingInput")) {
-          if (transformMeta == null) {
-            transformMeta = mappingTransform;
-          } else if (transformMeta != null) {
-            throw new HopTransformException(
-                BaseMessages.getString(
-                    PKG, "PipelineMeta.Exception.OnlyOneMappingInputTransformAllowed", "2"));
-          }
-        }
-      }
-      if (transformMeta == null) {
-        throw new HopTransformException(
-            BaseMessages.getString(PKG, "PipelineMeta.Exception.OneMappingInputTransformRequired"));
-      }
-      return transformMeta;
-    }
-  }
-
-  /**
-   * Finds the mapping output transform with the specified name. If no mapping output transform is
-   * found, null is returned.
-   *
-   * @param transformName the name to search for
-   * @return the transform meta-data corresponding to the desired mapping input transform, or null
-   *     if no transform was found
-   * @throws HopTransformException if any errors occur during the search
-   */
-  public TransformMeta findMappingOutputTransform(String transformName)
-      throws HopTransformException {
-    if (!Utils.isEmpty(transformName)) {
-      TransformMeta transformMeta =
-          findTransform(transformName); // TODO verify that it's a mapping output transform.
-      if (transformMeta == null) {
-        throw new HopTransformException(
-            BaseMessages.getString(
-                PKG, "PipelineMeta.Exception.TransformNameNotFound", transformName));
-      }
-      return transformMeta;
-    } else {
-      // Find the first mapping output transform that fits the bill.
-      TransformMeta transformMeta = null;
-      for (TransformMeta mappingTransform : transforms) {
-        if (mappingTransform.getTransformPluginId().equals("MappingOutput")) {
-          if (transformMeta == null) {
-            transformMeta = mappingTransform;
-          } else if (transformMeta != null) {
-            throw new HopTransformException(
-                BaseMessages.getString(
-                    PKG, "PipelineMeta.Exception.OnlyOneMappingOutputTransformAllowed", "2"));
-          }
-        }
-      }
-      if (transformMeta == null) {
-        throw new HopTransformException(
-            BaseMessages.getString(
-                PKG, "PipelineMeta.Exception.OneMappingOutputTransformRequired"));
-      }
-      return transformMeta;
-    }
-  }
-
-  /**
    * Gets a list of the resource dependencies.
    *
    * @return a list of ResourceReferences
@@ -3469,7 +3096,7 @@ public class PipelineMeta extends AbstractMeta
         .flatMap(
             (TransformMeta transformMeta) ->
                 transformMeta.getResourceDependencies(variables).stream())
-        .collect(Collectors.toList());
+        .toList();
   }
 
   /**
@@ -3478,8 +3105,8 @@ public class PipelineMeta extends AbstractMeta
    * without worrying about those parts of the implementation specific details.
    *
    * @param variables the variable variables to use
-   * @param definitions
-   * @param iResourceNaming
+   * @param definitions The definitions to use
+   * @param iResourceNaming The resource naming to use
    * @param metadataProvider the metadataProvider in which non-hop metadata could reside.
    * @return the filename of the exported resource
    */
@@ -3497,22 +3124,25 @@ public class PipelineMeta extends AbstractMeta
       //
       String baseName;
       String originalPath;
-      String fullname;
+      String fullName;
       String extension = "hpl";
       if (StringUtils.isNotEmpty(getFilename())) {
         FileObject fileObject = HopVfs.getFileObject(variables.resolve(getFilename()));
         originalPath = fileObject.getParent().getURL().toString();
         baseName = fileObject.getName().getBaseName();
-        fullname = fileObject.getURL().toString();
+        fullName = fileObject.getURL().toString();
 
         exportFileName =
             iResourceNaming.nameResource(
                 baseName, originalPath, extension, IResourceNaming.FileNamingType.PIPELINE);
         ResourceDefinition definition = definitions.get(exportFileName);
         if (definition == null) {
-          // If we do this once, it will be plenty :-)
+          // Create a copy of this pipeline metadata by serializing to and de-serializing from XML.
           //
-          PipelineMeta pipelineMeta = (PipelineMeta) this.realClone(false);
+          String xml = getXml(variables);
+          Node node = XmlHandler.loadXmlString(xml, XML_TAG);
+          PipelineMeta pipelineMeta = new PipelineMeta();
+          pipelineMeta.loadXml(node, exportFileName, metadataProvider, variables);
 
           // Set an appropriate name
           //
@@ -3546,20 +3176,17 @@ public class PipelineMeta extends AbstractMeta
           // Also remember the original filename (if any), including variables etc.
           //
           if (Utils.isEmpty(this.getFilename())) { // Generated
-            definition.setOrigin(fullname);
+            definition.setOrigin(fullName);
           } else {
             definition.setOrigin(this.getFilename());
           }
 
-          definitions.put(fullname, definition);
+          definitions.put(fullName, definition);
         }
       }
 
       return exportFileName;
-    } catch (FileSystemException e) {
-      throw new HopException(
-          BaseMessages.getString(PKG, CONST_ERROR_OPENING_OR_VALIDATING, getFilename()), e);
-    } catch (HopFileException e) {
+    } catch (FileSystemException | HopFileException e) {
       throw new HopException(
           BaseMessages.getString(PKG, CONST_ERROR_OPENING_OR_VALIDATING, getFilename()), e);
     }
@@ -3667,38 +3294,22 @@ public class PipelineMeta extends AbstractMeta
     transformChangeListeners.add(listener);
   }
 
-  public void addTransformChangeListener(int p, ITransformMetaChangeListener list) {
-    int indexListener = -1;
-    int indexListenerRemove = -1;
-    TransformMeta rewriteTransform = transforms.get(p);
-    ITransformMeta iface = rewriteTransform.getTransform();
-    if (iface instanceof ITransformMetaChangeListener) {
-      for (ITransformMetaChangeListener listener : transformChangeListeners) {
-        indexListener++;
-        if (listener.equals(iface)) {
-          indexListenerRemove = indexListener;
-        }
-      }
-      if (indexListenerRemove >= 0) {
-        transformChangeListeners.add(indexListenerRemove, list);
-      } else if (transformChangeListeners.isEmpty() && p == 0) {
-        transformChangeListeners.add(list);
+  public void addTransformChangeListener(
+      int transformIndex, ITransformMetaChangeListener listener) {
+    TransformMeta rewriteTransform = transforms.get(transformIndex);
+    ITransformMeta iTransformMeta = rewriteTransform.getTransform();
+    if (iTransformMeta instanceof ITransformMetaChangeListener changeListener) {
+      int index = transformChangeListeners.indexOf(changeListener);
+      if (index >= 0) {
+        transformChangeListeners.set(index, listener);
+      } else {
+        transformChangeListeners.add(listener);
       }
     }
   }
 
   public void removeTransformChangeListener(ITransformMetaChangeListener list) {
-    int indexListener = -1;
-    int indexListenerRemove = -1;
-    for (ITransformMetaChangeListener listener : transformChangeListeners) {
-      indexListener++;
-      if (listener.equals(list)) {
-        indexListenerRemove = indexListener;
-      }
-    }
-    if (indexListenerRemove >= 0) {
-      transformChangeListeners.remove(indexListenerRemove);
-    }
+    transformChangeListeners.remove(list);
   }
 
   public void notifyAllListeners(TransformMeta oldMeta, TransformMeta newMeta) {
@@ -3753,39 +3364,12 @@ public class PipelineMeta extends AbstractMeta
   }
 
   /**
-   * Sets transforms
-   *
-   * @param transforms value of transforms
-   */
-  public void setTransforms(List<TransformMeta> transforms) {
-    this.transforms = transforms;
-  }
-
-  /**
-   * Gets hops
-   *
-   * @return value of hops
-   */
-  public List<PipelineHopMeta> getHops() {
-    return hops;
-  }
-
-  /**
-   * Sets hops
-   *
-   * @param hops value of hops
-   */
-  public void setHops(List<PipelineHopMeta> hops) {
-    this.hops = hops;
-  }
-
-  /**
    * The PipelineType enum describes the various types of pipelines in terms of execution, including
    * Normal, Serial Single-Threaded, and Single-Threaded.
    */
   @SuppressWarnings("java:S115")
-  public enum PipelineType {
-
+  @Getter
+  public enum PipelineType implements IEnumHasCodeAndDescription {
     /** A normal pipeline. */
     Normal("Normal", BaseMessages.getString(PKG, "PipelineMeta.PipelineType.Normal")),
 
@@ -3808,24 +3392,6 @@ public class PipelineMeta extends AbstractMeta
     PipelineType(String code, String description) {
       this.code = code;
       this.description = description;
-    }
-
-    /**
-     * Gets the code corresponding to the pipeline type.
-     *
-     * @return the code
-     */
-    public String getCode() {
-      return code;
-    }
-
-    /**
-     * Gets the description of the pipeline type.
-     *
-     * @return the description
-     */
-    public String getDescription() {
-      return description;
     }
 
     /**
@@ -3857,24 +3423,6 @@ public class PipelineMeta extends AbstractMeta
       }
       return desc;
     }
-  }
-
-  /**
-   * Gets info
-   *
-   * @return value of info
-   */
-  public PipelineMetaInfo getInfo() {
-    return info;
-  }
-
-  /**
-   * Sets info
-   *
-   * @param info value of info
-   */
-  public void setInfo(PipelineMetaInfo info) {
-    this.info = info;
   }
 
   /**
@@ -4009,7 +3557,7 @@ public class PipelineMeta extends AbstractMeta
   /**
    * Sets the user who last modified the pipeline.
    *
-   * @param modifiedUser The user name to set.
+   * @param modifiedUser The username to set.
    */
   @Override
   public void setModifiedUser(String modifiedUser) {
@@ -4024,5 +3572,141 @@ public class PipelineMeta extends AbstractMeta
   @Override
   public String getModifiedUser() {
     return info.getModifiedUser();
+  }
+
+  @Override
+  protected INamedParameters getNamedParameters() {
+    return info.namedParams;
+  }
+
+  @HopMetadataProperty(
+      groupKey = "transform_error_handling",
+      key = "error",
+      listItemClass = TransformErrorMeta.class)
+  public List<TransformErrorMeta> getTransformErrorMetas() {
+    List<TransformErrorMeta> errorMetas = new ArrayList<>();
+    for (TransformMeta transformMeta : transforms) {
+      if (transformMeta.getTransformErrorMeta() != null) {
+        errorMetas.add(transformMeta.getTransformErrorMeta());
+      }
+    }
+    return errorMetas;
+  }
+
+  @HopMetadataProperty(
+      groupKey = "transform_error_handling",
+      key = "error",
+      listItemClass = TransformErrorMeta.class)
+  public void setTransformErrorMetas(List<TransformErrorMeta> errorMetas) {
+    for (TransformErrorMeta errorMeta : errorMetas) {
+      TransformMeta transformMeta = errorMeta.getSourceTransform();
+      if (transformMeta != null) {
+        transformMeta.setTransformErrorMeta(errorMeta);
+      }
+    }
+  }
+
+  public static class GetFieldsExtension {
+    private PipelineMeta pipelineMeta;
+    private TransformMeta transformMeta;
+    private IRowMeta row;
+    private String name;
+    private IRowMeta[] info;
+    private TransformMeta nextTransform;
+    private IVariables variables;
+    private IHopMetadataProvider metadataProvider;
+    private boolean handled;
+
+    public GetFieldsExtension(
+        PipelineMeta pipelineMeta,
+        TransformMeta transformMeta,
+        IRowMeta row,
+        String name,
+        IRowMeta[] info,
+        TransformMeta nextTransform,
+        IVariables variables,
+        IHopMetadataProvider metadataProvider) {
+      this.pipelineMeta = pipelineMeta;
+      this.transformMeta = transformMeta;
+      this.row = row;
+      this.name = name;
+      this.info = info;
+      this.nextTransform = nextTransform;
+      this.variables = variables;
+      this.metadataProvider = metadataProvider;
+      this.handled = false;
+    }
+
+    public PipelineMeta getPipelineMeta() {
+      return pipelineMeta;
+    }
+
+    public void setPipelineMeta(PipelineMeta pipelineMeta) {
+      this.pipelineMeta = pipelineMeta;
+    }
+
+    public TransformMeta getTransformMeta() {
+      return transformMeta;
+    }
+
+    public void setTransformMeta(TransformMeta transformMeta) {
+      this.transformMeta = transformMeta;
+    }
+
+    public IRowMeta getRow() {
+      return row;
+    }
+
+    public void setRow(IRowMeta row) {
+      this.row = row;
+    }
+
+    public String getName() {
+      return name;
+    }
+
+    public void setName(String name) {
+      this.name = name;
+    }
+
+    public IRowMeta[] getInfo() {
+      return info;
+    }
+
+    public void setInfo(IRowMeta[] info) {
+      this.info = info;
+    }
+
+    public TransformMeta getNextTransform() {
+      return nextTransform;
+    }
+
+    public void setNextTransform(TransformMeta nextTransform) {
+      this.nextTransform = nextTransform;
+    }
+
+    public IVariables getVariables() {
+      return variables;
+    }
+
+    public void setVariables(IVariables variables) {
+      this.variables = variables;
+    }
+
+    public IHopMetadataProvider getMetadataProvider() {
+      return metadataProvider;
+    }
+
+    public void setMetadataProvider(IHopMetadataProvider metadataProvider) {
+      this.metadataProvider = metadataProvider;
+    }
+
+    public boolean isHandled() {
+      return handled;
+    }
+
+    public void setHandled(boolean handled) {
+      this.handled = handled;
+    }
   }
 }
